# spad_simulator

./: .gitignore  AGENTS.md  Makefile  README.md  TODO_LATER.md  __init__.py  __main__.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-docs.yml
data/: absorption.xml  device_sagcm.xml  materials.xml  plots_config.xml
docs/: _config.yml  guide.css  guide.html  index.html  physics.html
docs/data/: absorption.xml  device_sagcm.xml  plots_config.xml
notebooks/: 01-AyushDocs-ElectricFieldSolver.ipynb  02-AyushDocs-IVandBreakdown.ipynb  03-AyushDocs-IonizationCoefficients.ipynb  04-AyushDocs-DarkCurrent.ipynb  05-AyushDocs-TriggerAndPDE.ipynb  06-AyushDocs-ThreeRegionModel.ipynb  trials.ipynb
scratch/: debug_breakdown.py  debug_exceptions.py  debug_fields.py  debug_iv.py  debug_photocurrent_exceptions.py  debug_trigger.py  print_doping.py  print_field.py  print_srh_details.py
src/: __init__.py  main.py  simulator.py  ui.py
src/avalanche/: __init__.py  afterpulsing.py  breakdown.py  current.py  dark_current.py  excess_noise.py  geiger.py  ionization.py  pde.py  pdp.py  trigger.py  tunneling.py
src/core/: __init__.py  absorption.py  constants.py  device.py  doping.py  fermi_dirac.py  grid.py  layer.py  material.py  material_grid.py  physics_helpers.py  units.py
src/optimization/: __init__.py  cost.py  pso.py
src/poisson/: __init__.py  field.py  numba_solver.py  service.py  solver.py
src/self_consistent/: __init__.py  circuit.py  loop.py  particle_mesh.py
src/simulator/: __init__.py  _facade.py  breakdown.py  builder.py  field_cache.py  monte_carlo.py  photocurrent.py
src/studies/: __init__.py  _config.py  avalanche.py  dark_current.py  dcr_vs_pde.py  field_sweep.py  fields.py  ionization.py  iv.py  optimization.py  param_sweep.py  pde.py  pdp.py  punch_breakdown.py  trap_density.py  trigger_back_calculate.py
src/transport/: __init__.py  carrier.py  continuum.py  drift_diffusion.py  jitter.py  monte_carlo.py  numba_mc.py
src/utils/: __init__.py  _exceptions.py  _logging.py  (+5 more)
tests/: conftest.py  test_avalanche.py  test_continuum.py  test_core.py  test_field_cache.py  test_optimization.py  test_poisson.py  test_self_consistent.py  test_simulator.py  test_studies.py  test_transport.py
(+12 files in other folders)
